--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <div id="app">加载中</div>
 <script>
     window.$docsify = {
-        // coverpage: true,
-        loadSidebar:true,
-        subMaxLevel:3,
+        coverpage: true,
+        loadSidebar: true,
+        subMaxLevel: 3,
         name: 'yueworld.js',
         repo: '',
         auto2top: true,
