--- a/configuration.simple.html
+++ b/configuration.simple.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="https://unpkg.com/yueworld/dist/min.css" type="text/css">
-    <base href="/">
+    <title>快速开始</title>
+    <link rel="stylesheet" href="//unpkg.com/yueworld/dist/min.css" type="text/css">
 </head>
 <body ng-controller="MainController">
 <div class="col-xs-12 pb15" style="border:1px solid #ddd">
@@ -57,7 +57,7 @@
     </div>
     <div class="loader-text">请稍候、系统正在努力加载中。</div>
 </div>
-<script type="text/javascript" src="https://unpkg.com/yueworld/dist/min.js"></script>
+<script type="text/javascript" src="//unpkg.com/yueworld/dist/min.js"></script>
 <script type="text/javascript">
     // 配置 yueworld.js
     $app.bootstrap({
